--- a/src/style/App.css
+++ b/src/style/App.css
@@ -29,6 +29,7 @@ main {
 .jumbotron {
     word-wrap: break-word;
     max-width: 55rem;
+    margin: 0 auto;
     height: auto;
     padding: 5px;
 }
