--- a/src/style/App.css
+++ b/src/style/App.css
@@ -36,12 +36,20 @@ main {
 
 .table-content {
     width: 187px;
-    height: 40px;
+    height: 42px;
 
     margin: 0 auto;
     text-align: center;
     border-radius: 5px;
     border: 1px solid #B8BABC;
+}
+.table-button {
+    width: 187px;
+    height: 40px;
+    background:#C2C9CB ;
+    margin: 0 auto;
+    text-align: center;
+    border-radius: 5px;
 }
 
 .table-borderless {
@@ -69,5 +77,8 @@ main {
 
 .table-item {
     margin-top: 5px;
+}
+.secondContetn td{
+   background: #f0f0f0
 }
 
